2008-07-15  Timothee Lecomte  <timothee.lecomte@ens.fr>
	
	* src/wxterminal/wxt_gui.h:
	* src/wxterminal/wxt_gui.cpp (LoadCursor):
	* src/wxterminal/bitmaps/xpm/cross.xpm:
	* src/wxterminal/bitmaps/xpm/icon16x16.xpm:
	* src/wxterminal/bitmaps/xpm/icon32x32.xpm:
	* src/wxterminal/bitmaps/xpm/icon64x64.xpm:
	* src/wxterminal/bitmaps/xpm/notfound.xpm:
	* src/wxterminal/bitmaps/xpm/right.xpm:
	* src/wxterminal/bitmaps/xpm/rotate.xpm:
	* src/wxterminal/bitmaps/xpm/size.xpm:
	Recent gcc versions are stricter with strings. Define xpm char arrays
	as const.  (Backport from 4.3)

2008-06-26  Peter Rosin  <pekberg@users.sourceforge.net>

	* term/ggi.trm: uint32 -> unit32_t
	Allows to build with current version of libggi (2.2.2).

2008-06-26  Ethan Merritt  <merritt@u.washington.edu>

	* src/graphics.c: Check for term->filled_polygon() before trying to
	call it.  (fixes segfault triggered by ggi terminal driver).

2008-06-25  Ethan Merritt  <merritt@u.washington.edu>

	* src/graph3d.c: Allow to draw contours associated with a pm3d surface.

2008-06-24  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgraph.c (drawgraph): Don't forget to draw a polyline even
	if it has only a single segment.
	Bugfix

2008-06-23  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/color.c (draw_inside_color_smooth_box_postscript): Fix colour of
	the 2nd box in the colour box for negative palette in postscript
	output.
	SF Bug #2000751

2008-06-22  Ethan Merritt  <merritt@u.washington.edu>

	* src/plot2d.c: Plot with vectors did not honor linestyles requested via
	'set style increment user'.

	* src/gplt_x11.c: Consolidate the fillstyle code into a single routine
	that is called both by fillbox and filledpolygon processing. This fixes
	a bug in which the fillstyle border was not applied to filled curves.

2008-06-17  Bastian Maerkisch  <bmaerkisch@web.de>
	* src/win/wgraph.c term/win.trm (WIN_set_color):  Preserve setting of
	dash type and linewidth when a new color is selected.